--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "axios": "^0.20.0",
     "connected-react-router": "^6.8.0",
     "i18next": "^19.3.2",
-    "lodash": "latest",
+    "lodash": "^4.17.21",
     "materialize-css": "^1.0.0-rc.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
